--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "node dist/index.js",
     "lint": "eslint . --ext .ts",
     "prepare": "husky",
-    "test": "echo \"No tests yet\" && exit 0"
+    "test": "echo \"No tests yet\" && exit 0",
+    "seed:rbac": "ts-node src/seeds/app-role.seed.ts"
   },
   "keywords": [],
   "author": "",
