--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "reflect-metadata": "^0.2.2",
     "swagger-ui-express": "^5.0.1",
     "typeorm": "^0.3.26",
+    "vnpay": "^2.4.4",
     "winston": "^3.18.3",
     "zod": "^4.1.12"
   },
